--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@sendgrid/mail": "^8.1.4",
 		"@stripe/stripe-js": "^4.9.0",
 		"stripe": "^17.3.1"
 	}
